@@ -1,0 +1,59 @@
+<?php
+/***************************************************************
+* Copyright notice
+*
+* (c) 2009 Oliver Klee <typo3-coding@oliverklee.de>
+* All rights reserved
+*
+* This script is part of the TYPO3 project. The TYPO3 project is
+* free software; you can redistribute it and/or modify
+* it under the terms of the GNU General Public License as published by
+* the Free Software Foundation; either version 2 of the License, or
+* (at your option) any later version.
+*
+* The GNU General Public License can be found at
+* http://www.gnu.org/copyleft/gpl.html.
+*
+* This script is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
+*
+* This copyright notice MUST APPEAR in all copies of the script!
+***************************************************************/
+
+/**
+ * Class 'tx_oelib_Exception_Database' for the 'oelib' extension.
+ *
+ * This class represents an exception that should be thrown when a database
+ * error has occured.
+ *
+ * The exception automatically will use an error message, the error message
+ * from the DB and the last query.
+ *
+ * @package TYPO3
+ * @subpackage tx_oelib
+ *
+ * @author Oliver Klee <typo3-coding@oliverklee.de>
+ */
+class tx_oelib_Exception_Database extends Exception {
+	/**
+	 * The constructor.
+	 */
+	public function __construct() {
+		$message = DATABASE_QUERY_ERROR . LF .
+			$GLOBALS['TYPO3_DB']->sql_error() . LF;
+
+		if ($GLOBALS['TYPO3_DB']->store_lastBuiltQuery) {
+			$message .= 'The last built query:' . LF .
+				$GLOBALS['TYPO3_DB']->debug_lastBuiltQuery;
+		}
+
+		parent::__construct($message);
+	}
+}
+
+if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/oelib/Exception/class.tx_oelib_Exception_Database.php']) {
+	include_once($TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/oelib/Exception/class.tx_oelib_Exception_Database.php']);
+}
+?>
